Issue #3302262: Change the z-index to 3000 for the Tour tip shepherd elements to work with Vartheme BS5 and Bootstrap 5

--- a/modules/varbase_tour/scss/theme/tour.default.theme.scss
+++ b/modules/varbase_tour/scss/theme/tour.default.theme.scss
@@ -179,6 +179,7 @@
 .shepherd-element {
   &.tip-module-varbase-tour {
     border-radius: 0;
+    z-index: 3000;
 
     &:focus {
       box-shadow: #3f8dc2 0px 0px 5px 0px;
